cmake_minimum_required(VERSION 3.15)
project(DQ)

set(CMAKE_CXX_STANDARD 20)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
add_subdirectory("Third/D3D12MemoryAllocator")
set_target_properties(D3D12MemoryAllocator PROPERTIES FOLDER "Third")
add_subdirectory("Window")
add_subdirectory("Graphics")
add_subdirectory("Scene")
add_subdirectory("Renderer")
add_subdirectory("Examples/Window")
add_subdirectory("Examples/DrawModel")