add_library(DQ-Graphics STATIC "Graphics.cpp")
target_include_directories(DQ-Graphics PUBLIC "${PROJECT_SOURCE_DIR}/Include")
target_include_directories(DQ-Graphics PRIVATE "${PROJECT_SOURCE_DIR}/Third/D3D12MemoryAllocator/include")
target_link_libraries(DQ-Graphics PUBLIC d3d12.lib dxgi.lib dxguid.lib D3D12MemoryAllocator)
set_target_properties(DQ-Graphics PROPERTIES FOLDER "DQ")