add_library(DQ-Renderer STATIC "Renderer.cpp")
target_include_directories(DQ-Renderer PUBLIC "${PROJECT_SOURCE_DIR}/Include")
target_include_directories(DQ-Renderer PRIVATE "${PROJECT_SOURCE_DIR}/Shaders")
target_include_directories(DQ-Renderer PRIVATE "${PROJECT_SOURCE_DIR}/Third/DirectX-Headers")
target_include_directories(DQ-Renderer PRIVATE "${PROJECT_SOURCE_DIR}/Third/D3D12MemoryAllocator/include")
target_include_directories(DQ-Renderer PRIVATE "${PROJECT_SOURCE_DIR}/Third/entt")
target_include_directories(DQ-Renderer PRIVATE "${PROJECT_SOURCE_DIR}/Scene")
target_link_libraries(DQ-Renderer PUBLIC DQ-Graphics DQ-Scene)
set_target_properties(DQ-Renderer PROPERTIES FOLDER "DQ")