add_library(DQ-Scene STATIC "Scene.cpp")
target_include_directories(DQ-Scene PUBLIC "${PROJECT_SOURCE_DIR}/Include")
target_include_directories(DQ-Scene PRIVATE "${PROJECT_SOURCE_DIR}/Third/entt")
target_link_libraries(DQ-Scene PUBLIC Ole32.lib)
set_target_properties(DQ-Scene PROPERTIES FOLDER "DQ")